feat: Add support for collapsing pretty-printed json
Because these are most useful in Loki if they are proper json in a
single structured log.

--- a/action.yml
+++ b/action.yml
@@ -27,6 +27,10 @@ inputs:
     description: "Interval in seconds between retry attempts"
     required: false
     default: "10"
+  collapse_json_logs:
+    description: "Collapse multi-line pretty-printed JSON into single log lines"
+    required: false
+    default: "true"
 
 runs:
   using: "composite"
@@ -48,4 +52,5 @@ runs:
         MAX_RETRIES: ${{ inputs.max_retries }}
         RETRY_INTERVAL_SECONDS: ${{ inputs.retry_interval_seconds }}
         STRUCTURED_METADATA: ${{ inputs.structured_metadata }}
+        COLLAPSE_JSON_LOGS: ${{ inputs.collapse_json_logs }}
       run: python3 "$GITHUB_ACTION_PATH/push_logs.py"
